--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.10.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "force": "^0.0.3",
     "formik": "^2.4.6",
@@ -22,7 +30,9 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
+    "vaul": "^1.1.2",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -31,6 +41,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.6"
   }
 }
