--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "recharts": "^2.15.4",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
